--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "firebase": "^12.0.0",
